# TicTacToe

./: .gitignore  TicTacToe.cabal  cloud-config.yml  shell.nix  stack.yaml
app/: Main.hs  TicTacToe.hs
client/: Main.hs
hedis/src/Database/Redis/: Core.hs
src/: Deserialization.hs  Domain.hs  Main.hs  Serialization.hs  TicTacToe.hs
test/: Spec.hs
