name:                TicTacToe
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/TicTacToe#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable tic-tac-toe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Domain
                     , TicTacToe 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
                     , text
                     , scotty
                     , transformers
                     , lens
                     , warp
  default-language:    Haskell2010

test-suite TicTacToe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TicTacToe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/TicTacToe
