name:                TicTacToe
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/TicTacToe#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Domain
                     , Deserialization
                     , Serialization
  build-depends:       base
                     , containers
                     , either
                     , QuickCheck
                     , parsec
                     , text
                     , transformers
                     , lens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

executable tic-tac-toe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       TicTacToe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bytestring
                     , utf8-string
                     , containers
                     , hedis
                     , http-types
                     , QuickCheck
                     , text
                     , scotty
                     , text-show
                     , transformers
                     , lens
                     , warp
                     , TicTacToe
  default-language:    Haskell2010

test-suite tic-tac-toe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , text
                     , TicTacToe
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vipo/TicTacToe
