name:                TicTacToe
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Domain
                     , Deserialization
                     , Serialization
  build-depends:       base
                     , containers
                     , either
                     , QuickCheck
                     , parsec
                     , text
                     , transformers
                     , lens
  ghc-options:         -threaded -Wall -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable tic-tac-toe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       TicTacToe
  ghc-options:         -threaded -Wall -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , blaze-html
                     , blaze-markup
                     , utf8-string
                     , containers
                     , hedis
                     , http-types
                     , QuickCheck
                     , text
                     , scotty
                     , text-show
                     , transformers
                     , lens
                     , warp
                     , TicTacToe
  default-language:    Haskell2010

executable tic-tac-toe-client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , utf8-string
                     , containers
                     , wreq
                     , http-types
                     , text
                     , lens
                     , scientific
                     , aeson
                     , random-shuffle
                     , random
                     , TicTacToe
  default-language:    Haskell2010

executable tic-tac-toe-test
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , text
                     , TicTacToe
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vipo/TicTacToe
